[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["titanium_white"]  # list of folders that contain the packages (["."] by default)
include = ["titanium_white*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "titanium-white"
version = "0.0.1"
authors = [
  { name="Johnathan Schaff", email="schaffjohnathan@gmail.com" },
]
description = "API for accessing courtlistener data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flake8>=4.0.1",
    "html2text",
    "loguru>=0.6.0",
    "pandas",
    "pylint>=2.15.0",
    "pytest>=6.2.5",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/ctrl-schaff/titanium_white"
"Bug Tracker" = "https://github.com/ctrl-schaff/titanium_white/issues"

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.2.5"

# Options
addopts = [
    "-rA",
    "-vv",
    "--doctest-modules",
    "--setup-show",
    "--capture=tee-sys",
    "--tb=line",
    "--durations=0",
    "--showlocals",
    "--strict-markers",
    "--color=yes",
    "--code-highlight=yes",
    "--debug"
]

# Path
norecursedirs = [
    ".svn",
    ".git",
    "_build",
    "tmp*",
    "lib", 
    "lib64",
    "tools"
]
testpaths = [
    "test"
]

markers = [
    "utility"
]

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
